force-app/main/default/objects/Meeting_WF_Approver_Rule__c/Meeting_WF_Approver_Rule__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Approver Rule</label>
    <nameField>
        <displayFormat>WFAR-{00000}</displayFormat>
        <label>Meeting WF Approver Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Approver Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>