force-app/main/default/objects/Meeting_WF_Approver_Rule__c/fields/First_Approver_Mode__c.field-meta.xml
<CustomField>
    <fullName>First_Approver_Mode__c</fullName>
    <description>Meeting WF config</description>
    <label>First Approver Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OwnerManager</fullName>
                <default>true</default>
                <label>OwnerManager</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>