force-app/main/default/objects/Meeting_WF_Approver_Rule__c/fields/Owner_Profile_Filter__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Filter__c</fullName>
    <description>Meeting WF config</description>
    <label>Owner Profile Filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>