force-app/main/default/objects/Meeting_WF_Approver_Rule__c/fields/Second_Approver_Group__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver_Group__c</fullName>
    <description>Meeting WF config</description>
    <label>Second Approver Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>