force-app/main/default/objects/Meeting_WF_Approver_Rule__c/fields/Second_Approver_Mode__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver_Mode__c</fullName>
    <description>Meeting WF config</description>
    <label>Second Approver Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UsersInRole</fullName>
                <default>true</default>
                <label>UsersInRole</label>
            </value>
            <value>
                <fullName>OwnerManagerManager</fullName>
            </value>
            <value>
                <fullName>PublicGroup</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>