force-app/main/default/objects/Meeting_WF_Approver_Rule__c/fields/Second_Approver_Roles__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver_Roles__c</fullName>
    <description>Meeting WF config</description>
    <label>Second Approver Roles</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>